2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix possible build failure on some Linux/s390x machines.
	* lispbibl.d (CODE_ADDRESS_RANGE): Ensure the same value across all
	Linux/s390x systems.
	(MAPPABLE_ADDRESS_RANGE_*) [UNIX_LINUX && S390_64]: Change.
	(SINGLEMAP_TYPE_MASK, SINGLEMAP_oint_type_shift): Adjust accordingly.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix possible build failure on some Linux/powerpc64 machines.
	* lispbibl.d (CODE_ADDRESS_RANGE): Ensure the same value across all
	Linux/powerpc64 systems.
	Enhance comments about memory map on Linux/PowerPC64.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/mips64 machines.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE): Ensure the same value across all
	Linux/mips64 systems.
	(MAPPABLE_ADDRESS_RANGE_END) [UNIX_LINUX && MIPS64]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && MIPS64]: Set to 0.
	* Makefile.devel (multibuild-linux-mips-64): Remove
	build-porting64-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/arm64 machines.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE): Ensure the same value across all
	Linux/arm64 systems.
	(SINGLEMAP_WORKS) [UNIX_LINUX && ARM64]: Set to 0.
	* Makefile.devel (multibuild-linux-arm64): Remove
	build-porting64-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/x86_64 machines (Ubuntu 17.10, Debian).
	Reported by Sam Steingold and Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE): Ensure the same value across all
	Linux/x86_64 systems.
	(MAPPABLE_ADDRESS_RANGE_*, SINGLEMAP_WORKS) [UNIX_LINUX && AMD64]:
	Change.
	* Makefile.devel (multibuild-linux-x86_64): Remove
	build-porting64-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/powerpc machines.