@@ -2761,6 +2761,12 @@ typedef enum {
        MALLOC_ADDRESS_RANGE = 0x0000000000000000UL or 0x0000010000000000UL
        SHLIB_ADDRESS_RANGE  = 0xFFFFF80100000000UL
        STACK_ADDRESS_RANGE  = 0x000007FEFF000000UL
+       One some Linux/sparc64 Debian build machines:
+       MMAP_FIXED_ADDRESS_HIGHEST_BIT = 46
+       CODE_ADDRESS_RANGE   = 0x0000010000000000UL
+       MALLOC_ADDRESS_RANGE = 0x0000010000000000UL
+       SHLIB_ADDRESS_RANGE  = 0xFFFF800100000000UL
+       STACK_ADDRESS_RANGE  = 0x000007FEFF000000UL
        On Linux 4.13/sparc64:
        MMAP_FIXED_ADDRESS_HIGHEST_BIT = 50
        CODE_ADDRESS_RANGE   = 0x0000010000000000UL
@@ -2768,6 +2774,11 @@ typedef enum {
        SHLIB_ADDRESS_RANGE  = 0xFFF8000100000000UL
        STACK_ADDRESS_RANGE  = 0x000007FEFF000000UL
        There is room from 0x0000018000000000UL to 0x000007FE00000000UL. */
+    /* Force the same CODE_ADDRESS_RANGE across platforms. */
+    #if (CODE_ADDRESS_RANGE == 0x0000000000000000UL || CODE_ADDRESS_RANGE == 0x0000010000000000UL)
+      #undef CODE_ADDRESS_RANGE
+      #define CODE_ADDRESS_RANGE 0x0000010000000000UL
+    #endif
     #define MAPPABLE_ADDRESS_RANGE_START 0x0000018000000000UL
     #define MAPPABLE_ADDRESS_RANGE_END   0x000007FDFFFFFFFFUL
   #endif
