@@ -1,5 +1,11 @@
 2018-02-17  Bruno Haible  <bruno@clisp.org>
 
+	Fix possible build failure on some Linux/sparc64 machines.
+	* lispbibl.d (CODE_ADDRESS_RANGE): Ensure the same value across all
+	Linux/sparc64 systems.
+
+2018-02-17  Bruno Haible  <bruno@clisp.org>
+
 	Fix possible build failure on some Linux/s390x machines.
 	* lispbibl.d (CODE_ADDRESS_RANGE): Ensure the same value across all
 	Linux/s390x systems.
